<resources>
    <string name="app_name">Expenses Tracked✓</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_dob">Enter Age</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">No Response</string>
    <string name="btn_sign_up">Register !!</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>
    <string name="header">Hello, User</string>
    <string name="btn_home">Home</string>
    <string name="btn_logout">Sign Out!</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Don\'t have an account yet, Register!</string>
    <string name="btn_link_login">Already have an account, Login!</string>
    <string name="btn_bypass">Bypass</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_add">Add</string>
    <string name="title_addPage">Add an Expense/Purchase</string>
    <string name="title_settings">Settings</string>
    <string name="title_calendar">Calendar</string>
    <string name="placeholder">NULL</string>

    <string name="filter_expenses">Filter</string>
    <string name="filter_option_today">By Today</string>
    <string name="filter_option_week">By Week</string>
    <string name="filter_option_month">By Month</string>
    <string name="filter_option_date">By Date</string>
    <string name="filter_option_range">By Date range</string>
    <string name="filter_todays_expenses">Today\'s expenses</string>
    <string name="filter_weeks_expenses">Week\'s expenses</string>
    <string name="filter_months_expenses">Month\'s expenses</string>
    <string name="filter_date_expenses">For %s</string>
    <string name="filter_date_range_expenses">%1$s - %2$s</string>

    <string name="default_string">Default</string>
    <string name="no_categories_string">&#60;No categories&#62;</string>
    <string name="no_expenses">There are no expenses.</string>
    <string name="total_string">Total</string>

    <string name="pref_currency_title">Currency</string>
    <string name="pref_currency_default">USD</string>
    <string-array name="pref_currency_list_titles">
        <item>US Dollar</item>
        <item>Euro</item>
        <item>British Pound</item>
        <item>Canadian Dollar</item>
        <item>Australian Dollar</item>
        <item>Ukrainian Hryvnia</item>
        <item>Russian Rouble</item>
    </string-array>
    <string-array name="pref_currency_list_values">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>AUD</item>
        <item>UAH</item>
        <item>RUB</item>
    </string-array>

    <!-- Predefined expense categories -->
    <string name="cat_general">General</string>
    <string name="cat_clothes">Clothes</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_food">Food</string>
    <string name="cat_health">Health</string>
    <string name="cat_household">Household</string>
    <string name="cat_hygiene">Hygiene</string>
    <string name="cat_pets">Pets</string>
    <string name="cat_presents">Presents</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_transportation">Transportation</string>
</resources>
